2009-02-13  Michael Wiegand <michael.wiegand@intevation.de>

	* openvasd/pluginload.c (plugins_reload_from_dir): Don't try to split
	include_folders if there is no such preference. 

2009-02-13  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* openvasd/pluginscheduler.c (hash_fill_deps): Improved
	warning message to avoid misinterpretation.

	* openvasd/shared_socket.c (shared_socket_process): Improved
	documentation.

	* openvasd/pluginlaunch.c (read_running_processes): Write a
	log entry in case of process_internal_msg fails.

	* Makefile: Renamed old target "doc" to "man" to avoid
	having two targets "doc".

2009-02-12  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* doc/Doxyfile, doc/Doxyfile_full: New. Directives for
	creation of doxygen source code documentation.

	* Makefile: Added targets "doc" and "doc-full".

	* MANIFEST: Updated.

2009-02-12  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Repaired resolution of Default or pattern- defined logins per host,
	printf Debug- messages.
	
	* openvasd/attack.c (fill_host_kb_ssh_credentials): Check if login
	is registered under keys before resolution, debug messages.
	
	* openvasd/attack.c (pattern_matches): printf debug messages.

2009-02-12  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Resolved bug when per-target ssh login information was already added in
	an arglist, has to be set be become replaced.

	* openvasd/ntp_11.c (build_global_sshlogin_info_map,
	build_global_host_sshlogins_map): If value alread found in arglist
	replace it.

2009-02-10  Michael Wiegand <michael.wiegand@intevation.de>

	* openvasd/pluginload.c (plugins_reload_from_dir): Add support for
	multiple, colon-separated include_folders in the preferences.

2009-02-10  Tim Brown <timb@nth-dimension.org.uk>

	* packaging/debian/control, packaging/debian/changelog,
	packaging/debian/openvas-server.templates, packaging/debian/po/gl.po,
	packaging/debian/po/cs.po, packaging/debian/po/pt_BR.po,